--- a/SignalRCoreWebRTC/Views/Shared/_Layout.cshtml
+++ b/SignalRCoreWebRTC/Views/Shared/_Layout.cshtml
@@ -2,24 +2,24 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>@ViewBag.Title - Example</title>
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Droid+Sans:400,700" rel="stylesheet" type="text/css">
     <link href="~/lib/icomoon/style.css" rel="stylesheet" />
-    <link href="~/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="~/lib/alertify/alertify.core.css" rel="stylesheet" />
-    <link href="~/lib/alertify/alertify.default.css" rel="stylesheet" />
+    <link href="~/lib/bootstrap/css/bootstrap.css" rel="stylesheet" />
+    <link href="~/lib/alertifyjs/build/css/alertify.min.css" rel="stylesheet" />
+    <link href="~/lib/alertifyjs/build/css/themes/default.min.css" rel="stylesheet" />
     <link href="~/Content/css/Custom.css" rel="stylesheet" />
 </head>
-<body data-mode="idle">
+<body>
     @RenderBody()
 
     <script src="~/lib/jquery/jquery.min.js"></script>
     <script src="~/lib/bootstrap/js/bootstrap.min.js"></script>
     <script src="~/lib/signalr/dist/browser/signalr.min.js"></script>
-    <script src="~/lib/alertify/alertify.min.js"></script>
+    <script src="~/lib/alertifyjs/build/alertify.min.js"></script>
     <script src="~/Content/js/utilsRTC.js"></script>
     <script src="~/Content/js/constWebRTC.js"></script>
     <script src="~/lib/adapter/adapter.min.js"></script>
